--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
-
 services:
   security-toolbox:
-    build: .
+    build:
+      context: .
     container_name: security-toolbox
     volumes:
       - ./results:/app/results
@@ -18,7 +17,7 @@ services:
     restart: unless-stopped
 
   zap:
-    image: owasp/zap2docker-stable
+    image: owasp/zap2docker-weekly
     container_name: zap
     ports:
       - "8080:8080"
@@ -28,53 +27,12 @@ services:
     restart: unless-stopped
 
   api:
-    image: python:3.9-slim
+    build:
+      context: ./api
     container_name: security-api
+    ports:
+      - "5000:5000"
     volumes:
       - ./results:/app/results
       - ./logs:/app/logs
-    ports:
-      - "5000:5000"
-    working_dir: /app
-    environment:
-      - FLASK_APP=app.py
-      - FLASK_ENV=development
-    command: >
-      bash -c "pip install flask flask-cors &&
-              echo 'from flask import Flask, request, jsonify
-              from flask_cors import CORS
-              import json
-              from datetime import datetime
-
-              app = Flask(__name__)
-              CORS(app)
-
-              @app.route(\"/api/v1/report/upload_json/\", methods=[\"POST\"])
-              def upload_json():
-                  try:
-                      data = request.json
-                      timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")
-                      filename = f\"api_report_{timestamp}.json\"
-                      
-                      with open(f\"results/{filename}\", \"w\") as f:
-                          json.dump(data, f, indent=2)
-                      
-                      return jsonify({
-                          \"status\": \"success\",
-                          \"message\": \"Report received and saved\",
-                          \"filename\": filename
-                      })
-                  except Exception as e:
-                      return jsonify({
-                          \"status\": \"error\",
-                          \"message\": str(e)
-                      }), 500
-
-              if __name__ == \"__main__\":
-                  app.run(host=\"0.0.0.0\", port=5000)' > app.py &&
-              python app.py"
     restart: unless-stopped
-
-networks:
-  security-network:
-    driver: bridge 
