--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
+version: '3.8'
+
 services:
   security-toolbox:
-    build:
-      context: .
+    build: .
     container_name: security-toolbox
     volumes:
       - ./results:/app/results
@@ -16,23 +17,6 @@ services:
     privileged: true
     restart: unless-stopped
 
-  zap:
-    image: owasp/zap2docker-weekly
-    container_name: zap
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./results:/zap/wrk
-    command: zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true
-    restart: unless-stopped
-
-  api:
-    build:
-      context: ./api
-    container_name: security-api
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./results:/app/results
-      - ./logs:/app/logs
-    restart: unless-stopped
+networks:
+  security-network:
+    driver: bridge 
