--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 # Interface graphique
-PyQt6==6.6.1
+PyQt6==6.4.2
+PyQt6-Qt6==6.4.2
+PyQt6-sip==13.4.1
 
 # Outils de sécurité
 python-nmap==0.7.1
 python-magic==0.4.27
+netifaces==0.11.0
 requests==2.31.0
 scapy==2.5.0
+psutil==5.9.8
 
 # Utilitaires
 python-dateutil==2.8.2
-pyyaml==6.0.1 
+pyyaml==6.0.1
+colorama==0.4.6
+tqdm==4.66.2 
